src/keymap.h
@@ -427,4 +427,10 @@ xkb_keymap_new(struct xkb_context *ctx,
                enum xkb_keymap_format format,
                enum xkb_keymap_compile_flags);
 
+xkb_layout_index_t
+wrap_group_into_range(int32_t group,
+                      xkb_layout_index_t num_groups,
+                      enum xkb_range_exceed_type out_of_range_group_action,
+                      xkb_layout_index_t out_of_range_group_number);
+
 #endif
